fix: New Spanish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -778,7 +778,8 @@
   "Weird, this shouldn’t ever be empty": "Que raro, esto nunca debería estar vacío",
   "You haven’t created any documents yet": "Aún no has creado ningún documento",
   "Documents you’ve recently viewed will be here for easy access": "Los documentos que hayas visto recientemente estarán aquí para fácil acceso",
-  "We sent out your invites!": "¡Hemos enviado tus invitaciones!",
+  "{{ count }} invites sent": "{{ count }} invites sent",
+  "{{ count }} invites sent_plural": "{{ count }} invites sent",
   "Those email addresses are already invited": "Esas direcciones de correo electrónico ya están invitadas",
   "Sorry, you can only send {{MAX_INVITES}} invites at a time": "Lo sentimos, solo puedes enviar {{MAX_INVITES}} invitaciones a la vez",
   "Invited {{roleName}} will receive access to": "{{roleName}} recibirá acceso a",
