fix: New Czech translations from Crowdin [ci skip]

--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -778,7 +778,8 @@
   "Weird, this shouldn’t ever be empty": "Divné, tohle by nikdy nemělo být prázdné",
   "You haven’t created any documents yet": "Zatím jste nevytvořili žádné dokumenty",
   "Documents you’ve recently viewed will be here for easy access": "Dokumenty, které jste si nedávno prohlíželi, zde budou pro snadný přístup",
-  "We sent out your invites!": "Rozeslali jsme vaše pozvánky!",
+  "{{ count }} invites sent": "{{ count }} invites sent",
+  "{{ count }} invites sent_plural": "{{ count }} invites sent",
   "Those email addresses are already invited": "Tyto e-mailové adresy jsou již pozvány",
   "Sorry, you can only send {{MAX_INVITES}} invites at a time": "Litujeme, můžete odeslat pouze {{MAX_INVITES}} pozvánek najednou",
   "Invited {{roleName}} will receive access to": "Pozvaní uživatelé s rolí {{roleName}} získají přístup k",
