fix: New Italian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -778,7 +778,8 @@
   "Weird, this shouldn’t ever be empty": "Strano, questo non dovrebbe mai essere vuoto",
   "You haven’t created any documents yet": "Non hai ancora creato alcun documento",
   "Documents you’ve recently viewed will be here for easy access": "I documenti che hai recentemente visualizzato compariranno qui per facilitarne l'accesso",
-  "We sent out your invites!": "Abbiamo inviato i tuoi inviti!",
+  "{{ count }} invites sent": "{{ count }} invites sent",
+  "{{ count }} invites sent_plural": "{{ count }} invites sent",
   "Those email addresses are already invited": "Agli indirizzi email è stato già inviato un invito",
   "Sorry, you can only send {{MAX_INVITES}} invites at a time": "Spiacenti, puoi inviare solo {{MAX_INVITES}} inviti alla volta",
   "Invited {{roleName}} will receive access to": "Invited {{roleName}} will receive access to",
