fix: New Japanese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ja_JP/translation.json
+++ b/shared/i18n/locales/ja_JP/translation.json
@@ -778,7 +778,8 @@
   "Weird, this shouldn’t ever be empty": "ここには何もありません",
   "You haven’t created any documents yet": "ここにはまだドキュメントがありません",
   "Documents you’ve recently viewed will be here for easy access": "最近閲覧したドキュメントがここに表示されます",
-  "We sent out your invites!": "招待を送信しました！",
+  "{{ count }} invites sent": "{{ count }} invites sent",
+  "{{ count }} invites sent_plural": "{{ count }} invites sent",
   "Those email addresses are already invited": "これらのメールアドレスは、すでに招待されています。",
   "Sorry, you can only send {{MAX_INVITES}} invites at a time": "一度に送信できる招待は最大 {{MAX_INVITES}} 人までです。",
   "Invited {{roleName}} will receive access to": "招待された {{roleName}} は次にアクセスできます",
