fix: New Dutch translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -778,7 +778,8 @@
   "Weird, this shouldn’t ever be empty": "Vreemd, dit zou nooit leeg moeten zijn",
   "You haven’t created any documents yet": "Je hebt nog geen documenten aangemaakt",
   "Documents you’ve recently viewed will be here for easy access": "Documenten die je onlangs hebt bekeken zullen hier voor eenvoudige toegang zijn",
-  "We sent out your invites!": "We hebben je uitnodigingen verstuurd!",
+  "{{ count }} invites sent": "{{ count }} invites sent",
+  "{{ count }} invites sent_plural": "{{ count }} invites sent",
   "Those email addresses are already invited": "Deze e-mailadressen zijn al uitgenodigd",
   "Sorry, you can only send {{MAX_INVITES}} invites at a time": "Sorry, je kunt enkel {{MAX_INVITES}} uitnodigingen tegelijk verzenden",
   "Invited {{roleName}} will receive access to": "Uitgenodigde {{roleName}} zal toegang krijgen tot",
