fix: New Portuguese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_PT/translation.json
+++ b/shared/i18n/locales/pt_PT/translation.json
@@ -778,7 +778,8 @@
   "Weird, this shouldn’t ever be empty": "Estranho, isto nunca deve estar vazio",
   "You haven’t created any documents yet": "Ainda não criou nenhum documento",
   "Documents you’ve recently viewed will be here for easy access": "Documentos que viu recentemente estarão aqui para acesso fácil",
-  "We sent out your invites!": "Enviamos os seus convites!",
+  "{{ count }} invites sent": "{{ count }} invites sent",
+  "{{ count }} invites sent_plural": "{{ count }} invites sent",
   "Those email addresses are already invited": "Esses endereços de e-mail já foram convidados",
   "Sorry, you can only send {{MAX_INVITES}} invites at a time": "Pode enviar {{MAX_INVITES}} convites de cada vez",
   "Invited {{roleName}} will receive access to": "{{roleName}} convidado receberá acesso a",
