fix: New Swedish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/sv_SE/translation.json
+++ b/shared/i18n/locales/sv_SE/translation.json
@@ -778,7 +778,8 @@
   "Weird, this shouldn’t ever be empty": "Konstigt, detta bör aldrig vara tomt",
   "You haven’t created any documents yet": "Du har inte skapat några dokument ännu",
   "Documents you’ve recently viewed will be here for easy access": "Dokument du nyligen har besökt kommer att finnas här för enkel åtkomst",
-  "We sent out your invites!": "Vi skickade ut dina inbjudningar!",
+  "{{ count }} invites sent": "{{ count }} invites sent",
+  "{{ count }} invites sent_plural": "{{ count }} invites sent",
   "Those email addresses are already invited": "Dessa e-postadresser är redan inbjudna",
   "Sorry, you can only send {{MAX_INVITES}} invites at a time": "Tyvärr, du kan bara skicka {{MAX_INVITES}} inbjudningar åt gången",
   "Invited {{roleName}} will receive access to": "Inbjuden {{roleName}} kommer att få tillgång till",
