fix: New Turkish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/tr_TR/translation.json
+++ b/shared/i18n/locales/tr_TR/translation.json
@@ -778,7 +778,8 @@
   "Weird, this shouldn’t ever be empty": "Garip, bu asla boş olmamalı",
   "You haven’t created any documents yet": "Henüz herhangi bir belge oluşturmadınız",
   "Documents you’ve recently viewed will be here for easy access": "Yakın zamanda görüntülediğiniz belgeler, kolay erişim için burada olacak",
-  "We sent out your invites!": "Davetlerinizi gönderdik!",
+  "{{ count }} invites sent": "{{ count }} invites sent",
+  "{{ count }} invites sent_plural": "{{ count }} invites sent",
   "Those email addresses are already invited": "Bu e-posta adresleri zaten davet edildi",
   "Sorry, you can only send {{MAX_INVITES}} invites at a time": "Üzgünüz, bir seferde yalnızca {{MAX_INVITES}} davet gönderebilirsiniz",
   "Invited {{roleName}} will receive access to": "Invited {{roleName}} will receive access to",
