fix: New Ukrainian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -778,7 +778,8 @@
   "Weird, this shouldn’t ever be empty": "Дивно, це ніколи не повинно бути порожнім",
   "You haven’t created any documents yet": "Ви ще не створили жодного документу",
   "Documents you’ve recently viewed will be here for easy access": "Документи, які ви нещодавно переглянули, будуть тут, для легкого доступу",
-  "We sent out your invites!": "Ми надіслали вам запрошення!",
+  "{{ count }} invites sent": "{{ count }} invites sent",
+  "{{ count }} invites sent_plural": "{{ count }} invites sent",
   "Those email addresses are already invited": "Ці електронні адреси вже запрошені",
   "Sorry, you can only send {{MAX_INVITES}} invites at a time": "Вибачте, ви можете надіслати лише {{MAX_INVITES}} запрошень одночасно",
   "Invited {{roleName}} will receive access to": "Invited {{roleName}} will receive access to",
