fix: New Chinese Simplified translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -778,7 +778,8 @@
   "Weird, this shouldn’t ever be empty": "奇怪，这里不应该是空的",
   "You haven’t created any documents yet": "你尚未创建任何文档",
   "Documents you’ve recently viewed will be here for easy access": "你最近浏览过的文档将放在此处以方便快速访问",
-  "We sent out your invites!": "您的邀请已发送！",
+  "{{ count }} invites sent": "{{ count }} invites sent",
+  "{{ count }} invites sent_plural": "{{ count }} invites sent",
   "Those email addresses are already invited": "此电子邮箱已被邀请",
   "Sorry, you can only send {{MAX_INVITES}} invites at a time": "抱歉，你一次只能发送 {{MAX_INVITES}} 个邀请",
   "Invited {{roleName}} will receive access to": "被邀请的 {{roleName}} 将获得访问权限对",
