fix: New Chinese Traditional translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_TW/translation.json
+++ b/shared/i18n/locales/zh_TW/translation.json
@@ -778,7 +778,8 @@
   "Weird, this shouldn’t ever be empty": "怪了，這不應該是空的",
   "You haven’t created any documents yet": "您還沒有建立任何文件",
   "Documents you’ve recently viewed will be here for easy access": "您最近檢視過的文件會被列於此方便您快速存取",
-  "We sent out your invites!": "我們發出了您的邀請！",
+  "{{ count }} invites sent": "{{ count }} invites sent",
+  "{{ count }} invites sent_plural": "{{ count }} invites sent",
   "Those email addresses are already invited": "這些電子郵件地址早前已被邀請過",
   "Sorry, you can only send {{MAX_INVITES}} invites at a time": "抱歉，您一次最多只能發送 {{MAX_INVITES}} 個邀請",
   "Invited {{roleName}} will receive access to": "受邀的 {{roleName}} 將獲得對……的訪問權限。",
