fix: New Vietnamese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -778,7 +778,8 @@
   "Weird, this shouldn’t ever be empty": "Cái này không bao giờ được để trống",
   "You haven’t created any documents yet": "Bạn chưa tạo bất kỳ tài liệu nào",
   "Documents you’ve recently viewed will be here for easy access": "Các tài liệu bạn đã xem gần đây sẽ ở đây để dễ dàng truy cập",
-  "We sent out your invites!": "Chúng tôi đã gửi lời mời của bạn!",
+  "{{ count }} invites sent": "{{ count }} invites sent",
+  "{{ count }} invites sent_plural": "{{ count }} invites sent",
   "Those email addresses are already invited": "Những địa chỉ email đó đã được mời",
   "Sorry, you can only send {{MAX_INVITES}} invites at a time": "Xin lỗi, bạn chỉ có thể gửi {{MAX_INVITES}} lời mời cùng một lúc",
   "Invited {{roleName}} will receive access to": "Invited {{roleName}} will receive access to",
