fix: New Portuguese, Brazilian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_BR/translation.json
+++ b/shared/i18n/locales/pt_BR/translation.json
@@ -778,7 +778,8 @@
   "Weird, this shouldn’t ever be empty": "Estranho, isso nunca deveria estar vazio",
   "You haven’t created any documents yet": "Você ainda não criou nenhum documento",
   "Documents you’ve recently viewed will be here for easy access": "Os documentos que você visualizou recentemente estarão aqui para facilitar o acesso",
-  "We sent out your invites!": "Enviamos seus convites!",
+  "{{ count }} invites sent": "{{ count }} invites sent",
+  "{{ count }} invites sent_plural": "{{ count }} invites sent",
   "Those email addresses are already invited": "Estes endereços de e-mail já foram convidados",
   "Sorry, you can only send {{MAX_INVITES}} invites at a time": "Desculpe, você só pode enviar {{MAX_INVITES}} convites por vez",
   "Invited {{roleName}} will receive access to": "Convidado {{roleName}} receberá acesso para",
