fix: New Indonesian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/id_ID/translation.json
+++ b/shared/i18n/locales/id_ID/translation.json
@@ -778,7 +778,8 @@
   "Weird, this shouldn’t ever be empty": "Aneh, ini seharusnya tidak pernah kosong",
   "You haven’t created any documents yet": "Anda belum membuat dokumen apa pun",
   "Documents you’ve recently viewed will be here for easy access": "Dokumen yang baru saja Anda lihat akan ada di sini agar mudah diakses",
-  "We sent out your invites!": "Kami mengirimkan undangan Anda!",
+  "{{ count }} invites sent": "{{ count }} invites sent",
+  "{{ count }} invites sent_plural": "{{ count }} invites sent",
   "Those email addresses are already invited": "Alamat email tersebut sudah diundang",
   "Sorry, you can only send {{MAX_INVITES}} invites at a time": "Maaf, Anda hanya dapat mengirim {{MAX_INVITES}} undangan sekaligus",
   "Invited {{roleName}} will receive access to": "Invited {{roleName}} will receive access to",
