fix: New Persian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fa_IR/translation.json
+++ b/shared/i18n/locales/fa_IR/translation.json
@@ -778,7 +778,8 @@
   "Weird, this shouldn’t ever be empty": "عجیب ، این هرگز نباید خالی باشد",
   "You haven’t created any documents yet": "شما هنوز هیچ سندی ایجاد نکرده اید",
   "Documents you’ve recently viewed will be here for easy access": "اسنادی که اخیراً مشاهده کرده اید برای دسترسی آسان در اینجا خواهند بود",
-  "We sent out your invites!": "دعوت‌نامه‌های شما ارسال شد!",
+  "{{ count }} invites sent": "{{ count }} invites sent",
+  "{{ count }} invites sent_plural": "{{ count }} invites sent",
   "Those email addresses are already invited": "Those email addresses are already invited",
   "Sorry, you can only send {{MAX_INVITES}} invites at a time": "متأسفانه شما تنها می‌توانید {{MAX_INVITES}} دعوت‌نامه به صورت همزمان ارسال نمایید",
   "Invited {{roleName}} will receive access to": "Invited {{roleName}} will receive access to",
