fix: New Norwegian Bokmal translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -778,7 +778,8 @@
   "Weird, this shouldn’t ever be empty": "Rart, dette burde aldri være tomt",
   "You haven’t created any documents yet": "Du har ikke opprettet noen dokumenter ennå",
   "Documents you’ve recently viewed will be here for easy access": "Dokumenter du nylig har sett vil være her for enkel tilgang",
-  "We sent out your invites!": "Vi sendte ut dine invitasjoner!",
+  "{{ count }} invites sent": "{{ count }} invites sent",
+  "{{ count }} invites sent_plural": "{{ count }} invites sent",
   "Those email addresses are already invited": "De e-postadressene er allerede invitert",
   "Sorry, you can only send {{MAX_INVITES}} invites at a time": "Beklager, du kan bare sende {{MAX_INVITES}} invitasjoner om gangen",
   "Invited {{roleName}} will receive access to": "{{roleName}} vil motta tilgang til",
