--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -285,6 +285,7 @@
   "You will receive an email when it's complete.": "Vous recevrez un email lorsque cela sera terminé.",
   "Include attachments": "Inclure les pièces jointes",
   "Including uploaded images and files in the exported data": "Inclure les images et fichiers transférés dans les données exportées",
+  "Include private collections": "Include private collections",
   "{{count}} more user": "{{count}} utilisateur supplémentaire",
   "{{count}} more user_plural": "{{count}} utilisateurs supplémentaires",
   "Filter options": "Options de filtre",
