fix: New Spanish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -285,6 +285,7 @@
   "You will receive an email when it's complete.": "Recibirás un correo electrónico cuando esté completado.",
   "Include attachments": "Incluir archivos adjuntos",
   "Including uploaded images and files in the exported data": "Incluyendo imágenes y archivos subidos en los datos exportados",
+  "Include private collections": "Include private collections",
   "{{count}} more user": "{{count}} usuario más",
   "{{count}} more user_plural": "{{count}} usuarios más",
   "Filter options": "Filter options",
