--- a/shared/i18n/locales/da_DK/translation.json
+++ b/shared/i18n/locales/da_DK/translation.json
@@ -285,6 +285,7 @@
   "You will receive an email when it's complete.": "Du vil modtage en e-mail, når det er færdiggjort.",
   "Include attachments": "Inkludér vedhæftede filer",
   "Including uploaded images and files in the exported data": "Inklusiv uploadede billeder og filer i de eksporterede data",
+  "Include private collections": "Include private collections",
   "{{count}} more user": "{{count}} more user",
   "{{count}} more user_plural": "{{count}} more users",
   "Filter options": "Filter options",
