fix: New Italian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -285,6 +285,7 @@
   "You will receive an email when it's complete.": "Riceverai un'email quando sarà completata.",
   "Include attachments": "Includi allegati",
   "Including uploaded images and files in the exported data": "Includere immagini e file caricati nei dati esportati",
+  "Include private collections": "Include private collections",
   "{{count}} more user": "{{count}} utente ancora",
   "{{count}} more user_plural": "{{count}} utenti ancora",
   "Filter options": "Opzioni di filtro",
