fix: New Dutch translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -285,6 +285,7 @@
   "You will receive an email when it's complete.": "Je ontvangt een e-mail als het voltooid is.",
   "Include attachments": "Bijlagen toevoegen",
   "Including uploaded images and files in the exported data": "Geüploade afbeeldingen en bestanden worden aan de geëxporteerde data toegevoegd",
+  "Include private collections": "Include private collections",
   "{{count}} more user": "{{count}} gebruiker meer",
   "{{count}} more user_plural": "{{count}} gebruikers meer",
   "Filter options": "Filter opties",
