fix: New Portuguese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_PT/translation.json
+++ b/shared/i18n/locales/pt_PT/translation.json
@@ -285,6 +285,7 @@
   "You will receive an email when it's complete.": "Receberá um e-mail quando estiver completo.",
   "Include attachments": "Incluir anexos",
   "Including uploaded images and files in the exported data": "A incluir imagens e ficheiros nos dados a exportar",
+  "Include private collections": "Include private collections",
   "{{count}} more user": "{{count}} more user",
   "{{count}} more user_plural": "{{count}} more users",
   "Filter options": "Filter options",
