--- a/shared/i18n/locales/sv_SE/translation.json
+++ b/shared/i18n/locales/sv_SE/translation.json
@@ -285,6 +285,7 @@
   "You will receive an email when it's complete.": "Du kommer att få ett e-postmeddelande när det är klart.",
   "Include attachments": "Inkludera bilagor",
   "Including uploaded images and files in the exported data": "Inkluderar uppladdade bilder och filer i den exporterade datan",
+  "Include private collections": "Include private collections",
   "{{count}} more user": "{{count}} användare till",
   "{{count}} more user_plural": "{{count}} användare till",
   "Filter options": "Filteralternativ",
