fix: New Turkish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/tr_TR/translation.json
+++ b/shared/i18n/locales/tr_TR/translation.json
@@ -285,6 +285,7 @@
   "You will receive an email when it's complete.": "Tamamlandığında bir e-posta alacaksınız.",
   "Include attachments": "Eklentileri dahil et",
   "Including uploaded images and files in the exported data": "Yüklenen resimler ve dosyalar dahil olmak üzere verilerin dışa aktarılması",
+  "Include private collections": "Include private collections",
   "{{count}} more user": "{{count}} more user",
   "{{count}} more user_plural": "{{count}} more users",
   "Filter options": "Filter options",
