fix: New Ukrainian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -285,6 +285,7 @@
   "You will receive an email when it's complete.": "Ви отримаєте електронного листа після його завершення.",
   "Include attachments": "Включити вкладення",
   "Including uploaded images and files in the exported data": "Включити завантажені зображення та файли в експортовані дані",
+  "Include private collections": "Include private collections",
   "{{count}} more user": "{{count}} more user",
   "{{count}} more user_plural": "{{count}} more users",
   "Filter options": "Filter options",
