fix: New Vietnamese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -285,6 +285,7 @@
   "You will receive an email when it's complete.": "Bạn sẽ nhận được một email khi nó hoàn tất.",
   "Include attachments": "Bao gồm tập tin đính kèm",
   "Including uploaded images and files in the exported data": "Bao gồm hình ảnh và tệp đã tải lên trong dữ liệu đã xuất",
+  "Include private collections": "Include private collections",
   "{{count}} more user": "{{count}} thành viên nữa",
   "{{count}} more user_plural": "{{count}} thành viên nữa",
   "Filter options": "Filter options",
