--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -285,6 +285,7 @@
   "You will receive an email when it's complete.": "Du vil motta en e-post når det er ferdig.",
   "Include attachments": "Inkluder vedlegg",
   "Including uploaded images and files in the exported data": "Inkludere opplastede bilder og filer i de eksporterte dataene",
+  "Include private collections": "Include private collections",
   "{{count}} more user": "{{count}} til bruker",
   "{{count}} more user_plural": "{{count}} flere brukere",
   "Filter options": "Filtervalg",
