fix: New Dutch translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -3,21 +3,21 @@
   "Delete": "Verwijderen",
   "Revoke": "Intrekken",
   "Revoke API key": "API-sleutel intrekken",
-  "Revoke token": "Tokens intrekken",
+  "Revoke token": "Token intrekken",
   "Open collection": "Open collectie",
   "New collection": "Nieuwe collectie",
   "Create a collection": "Maak een collectie",
-  "Edit": "Wijzig",
-  "Edit collection": "Wijzig collectie",
+  "Edit": "Bewerken",
+  "Edit collection": "Collectie bewerken",
   "Permissions": "Rechten",
-  "Collection permissions": "Verzamelingsrechten",
-  "Share this collection": "Deel deze collectie",
+  "Collection permissions": "Collectierechten",
+  "Share this collection": "Deze collectie delen",
   "Import document": "Importeer document",
   "Sort in sidebar": "Sorteer in zijbalk",
   "A-Z sort": "A-Z sorteren",
   "Z-A sort": "Z-A sorteren",
   "Manual sort": "Sorteer handmatig",
-  "Search in collection": "Zoek in collecties",
+  "Search in collection": "Collectie doorzoeken",
   "Star": "Maak favoriet",
   "Unstar": "Verwijder favoriet",
   "Subscribe": "Abonneer",
@@ -25,12 +25,12 @@
   "Unsubscribe": "Afmelden",
   "Unsubscribed from document notifications": "Afgemeld van documentmeldingen",
   "Archive": "Archief",
-  "Archive collection": "Zoek in collecties",
-  "Collection archived": "Collectie aangemaakt",
+  "Archive collection": "Collectie archiveren",
+  "Collection archived": "Collectie gearchiveerd",
   "Archiving": "Achiveren",
-  "Archiving this collection will also archive all documents within it. Documents from the collection will no longer be visible in search results.": "Het archiveren van deze collectie zal ook alle documenten erin archiveren. Documenten uit de collectie zullen niet langer zichtbaar zijn in de zoekresultaten.",
+  "Archiving this collection will also archive all documents within it. Documents from the collection will no longer be visible in search results.": "Het archiveren van deze collectie zal ook alle documenten erin archiveren. Documenten uit de collectie zijn niet langer zichtbaar in de zoekresultaten.",
   "Restore": "Herstel",
-  "Collection restored": "Collectie aangemaakt",
+  "Collection restored": "Collectie hersteld",
   "Delete collection": "Verwijder collectie",
   "Export": "Exporteer",
   "Export collection": "Exporteer collectie",
@@ -285,7 +285,7 @@
   "You will receive an email when it's complete.": "Je ontvangt een e-mail als het voltooid is.",
   "Include attachments": "Bijlagen toevoegen",
   "Including uploaded images and files in the exported data": "Geüploade afbeeldingen en bestanden worden aan de geëxporteerde data toegevoegd",
-  "Include private collections": "Include private collections",
+  "Include private collections": "Inclusief privécollecties",
   "{{count}} more user": "{{count}} gebruiker meer",
   "{{count}} more user_plural": "{{count}} gebruikers meer",
   "Filter options": "Filter opties",
@@ -323,7 +323,7 @@
   "Unable to download image": "Kan afbeelding niet downloaden",
   "Lightbox": "Lightbox",
   "View, navigate, or download images in the document": "Bekijk, navigeer of download afbeeldingen in het document",
-  "Zoom in": "Zoom in",
+  "Zoom in": "Inzoomen",
   "Zoom out": "Uitzoomen",
   "Close": "Sluiten",
   "Previous": "Vorige",
@@ -419,7 +419,7 @@
   "Logo": "Logo",
   "Expand sidebar": "Zijbalk uitvouwen",
   "Collapse sidebar": "Zijbalk invouwen",
-  "Archived collections": "Zoek in collecties",
+  "Archived collections": "Gearchiveerde collecties",
   "New doc": "Nieuw document",
   "Empty": "Leeg",
   "No collections": "Geen collecties",
@@ -689,8 +689,8 @@
   "You may have lost access to this document, try reloading": "Mogelijk heb je de toegang tot dit document verloren, probeer te herladen",
   "Too many users connected to document": "Te veel gebruikers verbonden met document",
   "Your edits will sync once other users leave the document": "Je wijzigingen worden bijgewerkt zodra het document niet meer in gebruik is",
-  "New version available": "New version available",
-  "Please reload the page to update to the latest version": "Please reload the page to update to the latest version",
+  "New version available": "Nieuwe versie beschikbaar",
+  "Please reload the page to update to the latest version": "Herlaad de pagina om bij te werken naar de nieuwste versie",
   "Server connection lost": "Verbinding met server verbroken",
   "Edits you make will sync once you’re online": "Wijzigingen die je maakt worden gesynchroniseerd zodra je online bent",
   "Offline": "Offline",
@@ -779,8 +779,8 @@
   "Weird, this shouldn’t ever be empty": "Vreemd, dit zou nooit leeg moeten zijn",
   "You haven’t created any documents yet": "Je hebt nog geen documenten aangemaakt",
   "Documents you’ve recently viewed will be here for easy access": "Documenten die je onlangs hebt bekeken zullen hier voor eenvoudige toegang zijn",
-  "{{ count }} invites sent": "{{ count }} invites sent",
-  "{{ count }} invites sent_plural": "{{ count }} invites sent",
+  "{{ count }} invites sent": "{{ count }} uitnodigingen verzonden",
+  "{{ count }} invites sent_plural": "{{ count }} uitnodigingen verzonden",
   "Those email addresses are already invited": "Deze e-mailadressen zijn al uitgenodigd",
   "Sorry, you can only send {{MAX_INVITES}} invites at a time": "Sorry, je kunt enkel {{MAX_INVITES}} uitnodigingen tegelijk verzenden",
   "Invited {{roleName}} will receive access to": "Uitgenodigde {{roleName}} zal toegang krijgen tot",
