fix: New French translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -484,6 +484,7 @@
   "Profile picture": "Photo de profil",
   "Create a new doc": "Créer un nouveau doc",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} ne sera pas notifié, car il n'a pas accès à ce document",
+  "Members of \"{{ groupName }}\" that have access to this document will be notified": "Members of \"{{ groupName }}\" that have access to this document will be notified",
   "Keep as link": "Garder comme lien",
   "Mention": "Mentionner",
   "Embed": "Intégrer",
@@ -627,6 +628,7 @@
   "edited": "modifié",
   "created the collection": "a créé la collection",
   "mentioned you in": "vous a mentionné dans",
+  "mentioned your group in": "mentioned your group in",
   "left a comment on": "a laissé un commentaire sur",
   "resolved a comment on": "a résolu un commentaire sur",
   "reacted {{ emoji }} to your comment on": "a réagi {{ emoji }} à votre commentaire sur",
@@ -1104,6 +1106,8 @@
   "Receive a notification when a document you are subscribed to or a thread you participated in receives a comment": "Recevez une notification lorsqu'un commentaire est déposé sur un document auquel vous êtes abonné ou dans un fil de discussion auquel vous avez participé",
   "Mentioned": "Mentionné",
   "Receive a notification when someone mentions you in a document or comment": "Recevez une notification lorsque quelqu'un vous mentionne dans un document ou commentaire",
+  "Group mentions": "Group mentions",
+  "Receive a notification when someone mentions a group you are a member of in a document or comment": "Receive a notification when someone mentions a group you are a member of in a document or comment",
   "Receive a notification when a comment thread you were involved in is resolved": "Recevoir une notification lorsqu'un sujet de commentaire auquel vous avez participé est résolu",
   "Reaction added": "Réaction ajoutée",
   "Receive a notification when someone reacts to your comment": "Recevoir une notification lorsque quelqu'un réagit à votre commentaire",
