fix: New Hungarian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/hu_HU/translation.json
+++ b/shared/i18n/locales/hu_HU/translation.json
@@ -484,6 +484,7 @@
   "Profile picture": "Profilkép",
   "Create a new doc": "Új doku létrehozása",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} won't be notified, as they do not have access to this document",
+  "Members of \"{{ groupName }}\" that have access to this document will be notified": "Members of \"{{ groupName }}\" that have access to this document will be notified",
   "Keep as link": "Keep as link",
   "Mention": "Mention",
   "Embed": "Beágyazott",
@@ -627,6 +628,7 @@
   "edited": "módosítva",
   "created the collection": "létrehozta a gyűjteményt",
   "mentioned you in": "megemlített téged itt:",
+  "mentioned your group in": "mentioned your group in",
   "left a comment on": "hozzászólt ehhez:",
   "resolved a comment on": "resolved a comment on",
   "reacted {{ emoji }} to your comment on": "reacted {{ emoji }} to your comment on",
@@ -1104,6 +1106,8 @@
   "Receive a notification when a document you are subscribed to or a thread you participated in receives a comment": "Értesítés fogadása, amikor egy feliratkozott dokumentumhoz vagy egy olyan témához, amelyben részt vett, hozzászólás érkezik",
   "Mentioned": "Megemlítve",
   "Receive a notification when someone mentions you in a document or comment": "Értesítés fogadása, amikor valaki megemlíti Önt egy dokumentumban vagy hozzászólásban",
+  "Group mentions": "Group mentions",
+  "Receive a notification when someone mentions a group you are a member of in a document or comment": "Receive a notification when someone mentions a group you are a member of in a document or comment",
   "Receive a notification when a comment thread you were involved in is resolved": "Értesítés fogadása, amikor megoldanak egy olyan hozzászólási szálat, amelyben Ön is részt vett",
   "Reaction added": "Reaction added",
   "Receive a notification when someone reacts to your comment": "Értesítlst kapsz, ha valaki reagál a hozzászólásodra",
