fix: New Polish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -484,6 +484,7 @@
   "Profile picture": "Zdjęcie profilowe",
   "Create a new doc": "Utwórz nowy dokument",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} nie zostanie powiadomiony, ponieważ nie mają dostępu do tego dokumentu",
+  "Members of \"{{ groupName }}\" that have access to this document will be notified": "Members of \"{{ groupName }}\" that have access to this document will be notified",
   "Keep as link": "Zachowaj jako link",
   "Mention": "Wzmianka",
   "Embed": "Osadzenie",
@@ -627,6 +628,7 @@
   "edited": "edytowano",
   "created the collection": "utworzył kolekcję",
   "mentioned you in": "wspomniał o tobie w",
+  "mentioned your group in": "mentioned your group in",
   "left a comment on": "zostawił komentarz na",
   "resolved a comment on": "rozstrzygnął komentarz",
   "reacted {{ emoji }} to your comment on": "zareagował {{ emoji }} na Twój komentarz na",
@@ -1104,6 +1106,8 @@
   "Receive a notification when a document you are subscribed to or a thread you participated in receives a comment": "Otrzymuj powiadomienie, gdy dokument, który subskrybujesz, lub wątek, w którym uczestniczyłeś, otrzyma komentarz",
   "Mentioned": "Wspomniany",
   "Receive a notification when someone mentions you in a document or comment": "Otrzymuj powiadomienie, gdy ktoś wspomni o Tobie w dokumencie lub komentarzu",
+  "Group mentions": "Group mentions",
+  "Receive a notification when someone mentions a group you are a member of in a document or comment": "Receive a notification when someone mentions a group you are a member of in a document or comment",
   "Receive a notification when a comment thread you were involved in is resolved": "Otrzymaj powiadomienie, gdy wątek komentarza, w który byłeś zaangażowany, został rozwiązany",
   "Reaction added": "Reakcja dodana",
   "Receive a notification when someone reacts to your comment": "Otrzymuj powiadomienie, gdy ktoś zareaguje na twój komentarz",
